<resources>
    <string name="app_name">Ombre</string>
    <string name="bannerDesc">Ombre Logo Banner</string>
    <string name="EventTitle">Choose an Event:</string>
    <string name="GenderTitle">Choose a Gender:</string>
    <string name="SubcategoryTitle">Choose a Subcategory:</string>
    <string name="TypeTitle">Choose a Type:</string>
    <string name="ColorTitle">Choose a Color:</string>
    <string name="PatternTitle">Choose a Pattern:</string>
    <string name="AdvText">Adventure</string>
    <string name="Recommendation">Recommendations:</string>
    <string name="Shorts">Shorts</string>
    <string name="Coats">Coat</string>
    <string name="Trousers">Trouser</string>
    <string name="Skirt">Skirt</string>
    <string name="Joggers">Joggers</string>
    <string name="Brown">Brown</string>
    <string name="White">White</string>
    <string name="Green">Green</string>
    <string name="Navy">Navy</string>
    <string name="Blouse">Blouse</string>
    <string name="Black">Black</string>
    <string name="Polo">Polo</string>
    <string name="Jacket">Jacket</string>
    <string name="Jackets">Jackets</string>
    <string name="Men">Men</string>
    <string name="Women">Women</string>
    <string name="GetRecommend">Get Recommendation</string>
    <string name="Next">Next</string>
    <string name="Camouflage">Camouflage</string>
    <string name="Solid">Solid</string>
    <string name="Striped">Striped</string>
    <string name="Chinos">Chinos</string>
    <string name="Tanktops">Tank Tops</string>
    <string name="Tshirt">T-shirt</string>
    <string name="BoardShorts">Board-shorts</string>
    <string name="Bikini">Bikini</string>
    <string name="RashGuard">Rash-guard</string>
    <string name="Gray">Gray</string>
    <string name="Business">Business</string>
    <string name="itemAdventure">Adventure Outfit</string>
    <string name="itemBusiness">Business Outfit</string>
    <string name="ResultsFor">Results for: </string>
    <string name="Event">Event: </string>
    <string name="Type">Type: </string>
    <string name="Color">Color: </string>
    <string name="Pattern">Pattern: </string>
    <string name="Save">Save </string>
    <string name="Results">Results: </string>
    <string name="ImagePH">Placeholder for Images </string>
    <string name="Drop">Drop your fit here: </string>
    <string name="Active">Active Adventure</string>
    <string name="Urban">Urban Adventure</string>
    <string name="Water">Water Adventure</string>
    <string name="Casual">Business Casual</string>
    <string name="Formal">Business Formal</string>
    <string name="Travel">Business Travel</string>
    <string name="Longsleeve">Long-sleeve</string>
    <string name="Pants">Pants</string>
    <string name="Suit">Suit</string>
    <string name="Dress">Dress</string>
    <string name="Blue">Blue</string>
    <string name="Pink">Pink</string>
    <string name="Category">Category:</string>
    <string name="LightBlue">LightBlue</string>
    <string name="Tropical">Tropical</string>
    <string name="Floral">Floral</string>
    <string name="Geometric">Geometric</string>
    <string name="Note">Note: If the results don’t match with the category,
you’ll be directed to our recommendation feature.</string>
    <string name="Pick">Pick Category</string>
    <string name="Classify">Classify Image</string>
    <string name="Gender">Gender</string>
    <string name="Take">Take a Picture</string>
    <string name="AdventureEvent">Adventure Event</string>
    <string name="BusinessEvent">Business Event</string>
    <string name="logo_description">Ombre Logo</string>

</resources>